# QA_GURU_BELEVTSEVA_HW_16

./: .gitignore  README.md
with_pip/: requirements.txt
with_pipenv/: Pipfile
with_poetry/: pyproject.toml
